--- a/src/Components/Titlecard/Titlecard.module.css
+++ b/src/Components/Titlecard/Titlecard.module.css
@@ -7,6 +7,8 @@
     left: 0;
     top: 0;
     /* padding-left: 1rem; */
+    margin-top: -50px;
+    padding-top: 50px;
     display: grid;
     grid-template-columns: 50% 50%;
     padding-bottom: 50px;
